force-app/main/default/objects/NSWCPPPaymentStep__c/NSWCPPPaymentStep__c.object-meta.xml
<CustomObject>
    <label>NSW CPP Payment Step</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>NSW CPP Payment Steps</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>