force-app/main/default/objects/NSWCPPPaymentStep__c/fields/AgencyTransactionID__c.field-meta.xml
<CustomField>
    <fullName>AgencyTransactionID__c</fullName>
    <label>Agency Transaction ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>