force-app/main/default/objects/NSWCPPPaymentStep__c/fields/BankReference__c.field-meta.xml
<CustomField>
    <fullName>BankReference__c</fullName>
    <label>Bank Reference</label>
    <length>64</length>
    <type>Text</type>
</CustomField>