force-app/main/default/objects/NSWCPPPaymentStep__c/fields/BPayBillerCode__c.field-meta.xml
<CustomField>
    <fullName>BPayBillerCode__c</fullName>
    <label>BPay Biller Code</label>
    <length>8</length>
    <type>Text</type>
</CustomField>