force-app/main/default/objects/NSWCPPPaymentStep__c/fields/BPayCRN__c.field-meta.xml
<CustomField>
    <fullName>BPayCRN__c</fullName>
    <label>BPay CRN</label>
    <length>64</length>
    <type>Text</type>
</CustomField>