force-app/main/default/objects/NSWCPPPaymentStep__c/fields/BPayProcessingDate__c.field-meta.xml
<CustomField>
    <fullName>BPayProcessingDate__c</fullName>
    <label>BPay Processing Date</label>
    <type>Date</type>
</CustomField>