force-app/main/default/objects/NSWCPPPaymentStep__c/fields/CardLast4Digits__c.field-meta.xml
<CustomField>
    <fullName>CardLast4Digits__c</fullName>
    <label>Card Last 4 Digits</label>
    <length>4</length>
    <type>Text</type>
</CustomField>