force-app/main/default/objects/NSWCPPPaymentStep__c/fields/CardPresent__c.field-meta.xml
<CustomField>
    <fullName>CardPresent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Card Present</label>
    <type>Checkbox</type>
</CustomField>