force-app/main/default/objects/NSWCPPPaymentStep__c/fields/CardType__c.field-meta.xml
<CustomField>
    <fullName>CardType__c</fullName>
    <label>Card Type</label>
    <length>32</length>
    <type>Text</type>
</CustomField>