force-app/main/default/objects/NSWCPPPaymentStep__c/fields/EmailAddress__c.field-meta.xml
<CustomField>
    <fullName>EmailAddress__c</fullName>
    <label>EmailAddress</label>
    <length>128</length>
    <type>Text</type>
</CustomField>