force-app/main/default/objects/NSWCPPPaymentStep__c/fields/Payment__c.field-meta.xml
<CustomField>
    <fullName>Payment__c</fullName>
    <label>Payment</label>
    <referenceTo>NSWCPPPayment__c</referenceTo>
    <relationshipLabel>Steps</relationshipLabel>
    <relationshipName>PaymentSteps</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>