force-app/main/default/objects/NSWCPPPaymentStep__c/fields/PaymentCompletionReference__c.field-meta.xml
<CustomField>
    <fullName>PaymentCompletionReference__c</fullName>
    <label>Payment Completion Reference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>