force-app/main/default/objects/NSWCPPPaymentStep__c/fields/RefundReason__c.field-meta.xml
<CustomField>
    <fullName>RefundReason__c</fullName>
    <label>Refund Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>