force-app/main/default/objects/NSWCPPPaymentStep__c/fields/RefundReference__c.field-meta.xml
<CustomField>
    <fullName>RefundReference__c</fullName>
    <externalId>true</externalId>
    <label>Refund Reference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>