force-app/main/default/objects/NSWCPPPaymentStep__c/fields/SetupRecurringPayment__c.field-meta.xml
<CustomField>
    <fullName>SetupRecurringPayment__c</fullName>
    <label>Setup Recurring Payment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>NSWCPPYesNo</valueSetName>
    </valueSet>
</CustomField>