force-app/main/default/objects/NSWCPPPaymentStep__c/fields/StepReference__c.field-meta.xml
<CustomField>
    <fullName>StepReference__c</fullName>
    <formula>IF(ISPICKVAL(Type__c, &apos;Payment&apos;), PaymentReference__c, RefundReference__c)</formula>
    <label>Payment/Refund Reference</label>
    <type>Text</type>
</CustomField>