force-app/main/default/objects/NSWCPPPaymentStep__c/fields/Surcharge__c.field-meta.xml
<CustomField>
    <fullName>Surcharge__c</fullName>
    <label>Surcharge</label>
    <precision>9</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>