force-app/main/default/objects/NSWCPPPaymentStep__c/fields/SurchargeAbsorbed__c.field-meta.xml
<CustomField>
    <fullName>SurchargeAbsorbed__c</fullName>
    <label>Surcharge Absorbed</label>
    <precision>9</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>