force-app/main/default/objects/NSWCPPPaymentStep__c/fields/SurchargeGST__c.field-meta.xml
<CustomField>
    <fullName>SurchargeGST__c</fullName>
    <label>Surcharge GST</label>
    <precision>9</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>