force-app/main/default/objects/NSWCPPPaymentStep__c/recordTypes/Failed.recordType-meta.xml
<RecordType>
    <fullName>Failed</fullName>
    <active>true</active>
    <label>Failed</label>
</RecordType>