force-app/main/default/objects/NSWCPPPaymentStep__c/recordTypes/Initiated.recordType-meta.xml
<RecordType>
    <fullName>Initiated</fullName>
    <active>true</active>
    <label>Initiated</label>
</RecordType>