force-app/main/default/objects/NSWCPPPaymentStep__c/recordTypes/Refund.recordType-meta.xml
<RecordType>
    <fullName>Refund</fullName>
    <active>true</active>
    <label>Refund</label>
</RecordType>